Pushing the changes for Self Help feature.

--- a/InvoiceManagement/InvoiceManagement.csproj
+++ b/InvoiceManagement/InvoiceManagement.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\SelfHelpModule\SelfHelp.css" />
+    <None Include="wwwroot\SelfHelpModule\SelfHelp.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
   </ItemGroup>
 
