Adding chat API controller and some UI UX upgrades.

--- a/InvoiceManagement/InvoiceManagement.csproj
+++ b/InvoiceManagement/InvoiceManagement.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="SelfHelpModule\Controllers\ChatController.cs" />
+    <Content Include="SelfHelpModule\Models\ChatRequest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\SelfHelpModule\SelfHelp.css" />
     <None Include="wwwroot\SelfHelpModule\SelfHelp.js" />
   </ItemGroup>
